recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:1: error: not found: type double
override def run(x:double) {
                   ^