recursion.logo.square.FourSquare.scala.code
override def run(x:double) {
  avance(x)
  droite(90)
  avance(x)
  droite(90)
  avance(x)
}

run(100d)
run(100d)
run(100d)